Fix spacing on GitLab
e.g. http://i.imgur.com/0ls8StY.png

--- a/extension/index.css
+++ b/extension/index.css
@@ -1,6 +1,7 @@
 .deps {
   list-style: none;
   padding: 0 !important;
+  margin: 0 !important; /* gitlab */
   font-size: 13px;
 }
 .deps > li {
@@ -18,6 +19,7 @@ li.empty {
   margin: 5px;
 }
 .deps:empty:before {
+  display: block;
   content: "loading";
   padding: 10px;
   animation: npmhub-pulse 1s infinite;
